--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 </p>
               </div>
               <div class="col-md-4 text-md-right">
-                <p class="small-xs"><a class="text-white" href="#">Privacy Policy</a>. Design&nbsp;by&nbsp;<a class="text-white" href="https://www.templatemonster.com/">Templatemonster</a></p>
+                <p class="small-xs"><a class="text-white" href="#">Privacy Policy</a>. Design&nbsp;by&nbsp;<a class="text-white" href="https://www.templatemonster.com/">Al tawakkal digital marketing agency</a></p>
               </div>
             </div>
           </div>
