--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="unit-left"><span class="icon icon-primary fa-map-marker"></span></div>
                         <div class="unit-body">
                           <div class="title"><span class="small">Address Info</span></div>
-                          <h6><a href="#">12 Main Street Pt. London England</a></h6>
+                          <h6><a href="#">12 Main Street Pt. Abu dhabi UAE</a></h6>
                         </div>
                       </div>
                     </li>
@@ -367,7 +367,7 @@
                 </p>
               </div>
               <div class="col-md-4 text-md-right">
-                <p class="small-xs"><a class="text-white" href="#">Privacy Policy</a>. Design&nbsp;by&nbsp;<a class="text-white" href="https://www.templatemonster.com/">Templatemonster</a></p>
+                <p class="small-xs"><a class="text-white" href="#">Privacy Policy</a>. Design&nbsp;by&nbsp;<a class="text-white" href="#">Al Tawakkal Digital Marketing Agency</a></p>
               </div>
             </div>
           </div>
