edited third coomit

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
             <div class="col-md-9 col-lg-6">
               <div class="box-info-custom" style="background-image: url(images/home-3-02-735x394.jpg );">
                 <div class="box-info-custom-inner">
-                  <h5 class="box-info-custom-title"><a href="#"> Oven Repair</a></h5>
-                  <p>Be sure that you work with a team of professionals who will be able to help you every step of the way with your oven repair needs.</p>
+                  <h5 class="box-info-custom-title"><a href="#"> Used Ac sale and purchase</a></h5>
+                  <p>Be sure that you work with a team of professionals who will be able to help you every step of the way with your Used Ac sale and purchase needs.</p>
                 </div>
               </div>
             </div>
