--- a/contacts.html
+++ b/contacts.html
@@ -135,7 +135,7 @@
                     <div class="unit flex-row unit-spacing-md">
                       <div class="unit-left"><span class="icon icon-primary fa-map-marker"></span></div>
                       <div class="unit-body">
-                        <h6><a class="text-darker" href="#">9863 - 9867 Mill Road, Cambridge, MG09 99HT</a></h6>
+                        <h6><a class="text-darker" href="#">P.O Box : 111869, Plot No: 88 Near Desh Bangla Market, Mussafah M/37, Abu Dhabi UAE/a></h6>
                       </div>
                     </div>
                   </li>
@@ -151,39 +151,14 @@
                     <div class="unit flex-row unit-spacing-md">
                       <div class="unit-left"><span class="icon icon-primary fa-envelope"></span></div>
                       <div class="unit-body">
-                        <h6><a class="text-primary" href="mailto:#">mail@demolink.org</a></h6>
+                        <h6><a class="text-primary" href="mailto:#">buttcoolpoint@gmail.com</a></h6>
                       </div>
                     </div>
                   </li>
                 </ul>
-                <div class="offset-top-40"></div><span class="small text-spacing-340 text-uppercase text-regular">Office 2</span>
-                <ul class="list offset-top-20 list-lg-middle text-left list-classic">
-                  <li>
-                    <div class="unit flex-row unit-spacing-md">
-                      <div class="unit-left"><span class="icon icon-primary fa-map-marker"></span></div>
-                      <div class="unit-body">
-                        <h6><a class="text-darker" href="#">9870 St Vincent Place, Glasgow, DC 45 Fr 45</a></h6>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="unit flex-row unit-spacing-md">
-                      <div class="unit-left"><span class="icon icon-primary fa-phone"></span></div>
-                      <div class="unit-body">
-                        <h6><a class="text-darker" href="tel:#">+1 800 603 6035</a></h6>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="unit flex-row unit-spacing-md">
-                      <div class="unit-left"><span class="icon icon-primary fa-envelope"></span></div>
-                      <div class="unit-body">
-                        <h6><a class="text-primary" href="mailto:#">mail@demolink.org</a></h6>
-                      </div>
-                    </div>
-                  </li>
-                </ul>
-              </div>
+                
+
+                
               <div class="col-md-6 offset-xl-1 col-xl-5 offset-xxl-2 col-xxl-6 position-static">
                 <div class="google-map-container" data-zoom="5" data-center="6036 Richmond hwy., Alexandria, VA, 2230" data-icon="images/gmap_marker.png" data-icon-active="images/gmap_marker_active.png" data-styles="[{&quot;featureType&quot;:&quot;administrative&quot;,&quot;elementType&quot;:&quot;labels.text.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#444444&quot;}]},{&quot;featureType&quot;:&quot;landscape&quot;,&quot;elementType&quot;:&quot;all&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#f2f2f2&quot;}]},{&quot;featureType&quot;:&quot;poi&quot;,&quot;elementType&quot;:&quot;all&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;road&quot;,&quot;elementType&quot;:&quot;all&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:45}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;all&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;road.arterial&quot;,&quot;elementType&quot;:&quot;labels.icon&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;elementType&quot;:&quot;all&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;elementType&quot;:&quot;all&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#46bcec&quot;},{&quot;visibility&quot;:&quot;on&quot;}]}]">
                   <div class="google-map"></div>
