--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   <div class="col-xxl-8 col-md-9" data-caption-animate="fadeInDown" data-caption-delay="200">
                     <h1 class="text-white">Quality Appliance Repair</h1>
                     <p class="h6 offset-top-30">We are the largest full-service appliance repair company in the world. We service all types and brands of home appliances. People trust us.</p>
-                    <div class="group"><a class="btn btn-primary btn-form" href="#">Our services</a><a class="btn btn-dark btn-form" href="#">Get in touch</a></div>
+                    <div class="group"><a class="btn btn-primary btn-form" href="#">Our services</a><a class="btn btn-dark btn-form" href="https://wa.link/0s6yv4">Get in touch</a></div>
                   </div>
                 </div>
               </div>
