hamara photos added

--- a/contacts.html
+++ b/contacts.html
@@ -143,7 +143,7 @@
                     <div class="unit flex-row unit-spacing-md">
                       <div class="unit-left"><span class="icon icon-primary fa-phone"></span></div>
                       <div class="unit-body">
-                        <h6><a class="text-darker" href="tel:#">+1 800 603 6035</a></h6>
+                        <h6><a class="text-darker" href="tel:#">+971 56 279 3232</a></h6>
                       </div>
                     </div>
                   </li>
@@ -234,7 +234,7 @@
                     <li>
                       <div class="unit flex-row unit-spacing-xs">
                         <div class="unit-left"><span class="icon icon--school-bus-yellow fa-map-marker"></span></div>
-                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="#">1901 Avenue of the Stars Suite 200<br class="d-none d-md-block">	San Diego, CA 90067</a></div>
+                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="#">P.O Box : 111869, Plot No: 88 Near Desh Bangla Market, <br class="d-none d-md-block">	Mussafah M/37, Abu Dhabi UAE</a></div>
                       </div>
                     </li>
                     <li>
@@ -246,7 +246,7 @@
                     <li>
                       <div class="unit flex-row unit-spacing-xs">
                         <div class="unit-left"><span class="icon icon--school-bus-yellow fa-envelope"></span></div>
-                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="mailto:#">mail@demolink.org</a></div>
+                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="mailto:#">buttcoolpoint@gmail.com<</a></div>
                       </div>
                     </li>
                   </ul>
@@ -274,7 +274,7 @@
                 </p>
               </div>
               <div class="col-md-4 text-md-right">
-                <p class="small-xs"><a class="text-white" href="#">Privacy Policy</a>. Design&nbsp;by&nbsp;<a class="text-white" href="https://www.templatemonster.com/">Templatemonster</a></p>
+                <p class="small-xs"><a class="text-white" href="#">Privacy Policy</a>. Design&nbsp;by&nbsp;<a class="text-white" href="#">Al tawakkal</a></p>
               </div>
             </div>
           </div>
