--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                         <div class="unit-left"><span class="icon icon-primary fa-phone"></span></div>
                         <div class="unit-body">
                           <div class="title"><span class="small">CUSTOMER SUPPORT & SALES</span></div>
-                          <h6><a href="tel:#">+971 56 279 3232</a></h6>
+                          <h6><a href="tel:#">
+                            
+                          </a></h6>
                         </div>
                       </div>
                     </li>
@@ -119,7 +121,7 @@
                   <div class="col-xxl-8 col-md-9" data-caption-animate="fadeInDown" data-caption-delay="200">
                     <h1 class="text-white">Quality Appliance Repair</h1>
                     <p class="h6 offset-top-30">We are the largest full-service appliance repair company in the world. We service all types and brands of home appliances. People trust us.</p>
-                    <div class="group"><a class="btn btn-primary btn-form" href="#">Our services</a><a class="btn btn-dark btn-form" href="https://wa.link/0s6yv4">Get in touch</a></div>
+                    <div class="group"><a class="btn btn-primary btn-form" href="#">Our services</a><a class="btn btn-dark btn-form" href="https://wa.link/0s6yv4">Whatsapp Us</a></div>
                   </div>
                 </div>
               </div>
@@ -132,7 +134,7 @@
                   <div class="col-xxl-8 col-md-9" data-caption-animate="fadeInDown" data-caption-delay="200">
                     <h1 class="text-white">Professional Customer Service</h1>
                     <p class="h6 offset-top-30">Our qualified team strives for ensuring your satisfaction, while offering the highest levels of professional service at affordable and competitive rates.</p>
-                    <div class="group"><a class="btn btn-primary btn-form" href="#">Our services</a><a class="btn btn-dark btn-form" href="#">Get in touch</a></div>
+                    <div class="group"><a class="btn btn-primary btn-form" href="#">Our services</a><a class="btn btn-dark btn-form" href="https://wa.link/0s6yv4">Whatsapp Us</a></div>
                   </div>
                 </div>
               </div>
@@ -145,7 +147,7 @@
                   <div class="col-xxl-8 col-md-9" data-caption-animate="fadeInDown" data-caption-delay="200">
                     <h1 class="text-white">Experienced Technicians</h1>
                     <p class="h6 offset-top-30">Our technicians have decades of practical, in-field experience besides factory training. This means they have the knowledge and skills needed to diagnose and repair any appliance you may have.</p>
-                    <div class="group"><a class="btn btn-primary btn-form" href="#">Our services</a><a class="btn btn-dark btn-form" href="#">Get in touch</a></div>
+                    <div class="group"><a class="btn btn-primary btn-form" href="#">Our services</a><a class="btn btn-dark btn-form" href="https://wa.link/0s6yv4">Whatsapp Us</a></div>
                   </div>
                 </div>
               </div>
