--- a/index.html
+++ b/index.html
@@ -329,19 +329,19 @@
                     <li>
                       <div class="unit flex-row unit-spacing-xs">
                         <div class="unit-left"><span class="icon icon--school-bus-yellow fa-map-marker"></span></div>
-                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="#">1901 Avenue of the Stars Suite 200<br class="d-none d-md-block">	San Diego, CA 90067</a></div>
+                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="#">P.O Box : 111869, Plot No: 88 Near Desh Bangla Market<br class="d-none d-md-block">	Mussafah M/37, Abu Dhabi UAE/a></div>
                       </div>
                     </li>
                     <li>
                       <div class="unit flex-row unit-spacing-xs">
                         <div class="unit-left"><span class="icon icon--school-bus-yellow fa-phone"></span></div>
-                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="tel:#">05</a></div>
+                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="tel:#">+97156279323</a></div>
                       </div>
                     </li>
                     <li>
                       <div class="unit flex-row unit-spacing-xs">
                         <div class="unit-left"><span class="icon icon--school-bus-yellow fa-envelope"></span></div>
-                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="mailto:#">mail@demolink.org</a></div>
+                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="mailto:#">buttcoolpoint@gmail.com</a></div>
                       </div>
                     </li>
                   </ul>
