--- a/contacts.html
+++ b/contacts.html
@@ -240,13 +240,13 @@
                     <li>
                       <div class="unit flex-row unit-spacing-xs">
                         <div class="unit-left"><span class="icon icon--school-bus-yellow fa-phone"></span></div>
-                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="tel:#">646-325-0357</a></div>
+                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="tel:#">+971562793232</a></div>
                       </div>
                     </li>
                     <li>
                       <div class="unit flex-row unit-spacing-xs">
                         <div class="unit-left"><span class="icon icon--school-bus-yellow fa-envelope"></span></div>
-                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="mailto:#">buttcoolpoint@gmail.com<</a></div>
+                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="mailto:#">buttcoolpoint@gmail.com</a></div>
                       </div>
                     </li>
                   </ul>
