--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
                         <div class="unit-left"><span class="icon icon-primary fa-phone"></span></div>
                         <div class="unit-body">
                           <div class="title"><span class="small">CUSTOMER SUPPORT & SALES</span></div>
-                          <h6><a href="tel:#">
-                            
-                          </a></h6>
+                          <h6><a href="tel:#">+971562793232</a></h6>
                         </div>
                       </div>
                     </li>
