--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <li>
                       <div class="unit flex-row unit-spacing-xs">
                         <div class="unit-left"><span class="icon icon--school-bus-yellow fa-map-marker"></span></div>
-                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="#">P.O Box : 111869, Plot No: 88 Near Desh Bangla Market<br class="d-none d-md-block">	Mussafah M/37, Abu Dhabi UAE/a></div>
+                        <div class="unit-body"><a class="text-school-bus-yellow-white" href="#">P.O Box : 111869, Plot No: 88 Near Desh Bangla Market<br class="d-none d-md-block">	Mussafah M/37, Abu Dhabi UAE</div>
                       </div>
                     </li>
                     <li>
